2016-08-07	"The chicken was involved, the pig was committed."

		GNUmakefile :
		- `make' now no longer runs tests like `make check' does
		- fixed duplicate addition of `-Xinnocent-pear -doge -v' to
		  compiler command line for test-orly-wut and test-doge*
		  test cases -- including for old GNU make
		- added share/innocent-pear/lolrus.o as a dependency of
		  bin/innocent-pear-doge

		bin/innocent-pear-doge.cc :
		- factored out string-to-integer parsing to share/innocent-
		  pear/lolrus.cc

		share/innocent-pear/lolrus.cc :
		- initial version

		include/innocent-pear/host/lolcat.h :
		- bug fix: now includes <iostream>
		- added prototype for lolrus(...)

2016-08-06	RAII for managing temporaries.  Refactoring.  Bug fixes.

		GNUmakefile :
		- now uses the new file names for the share/innocent-pear/
		  doge-*.cc modules
		- now dumps (part of) compiled binaries for test-doge* test
		  cases, for debugging

		include/innocent-pear/bbq.h :
		- innocent_pear::impl::pow<...>() is now Always Inline™

		test/infra/travis-install-deps.sh :
		- now also installs xz-utils, to allow use of xz

		share/innocent-pear/sleepier.cc ,
		include/innocent-pear/host/lolcat.h :
		- now defines sleepier_t class instead of sleepier(...) and
		  sleepiest(...) routines

		bin/innocent-pear-c++.cc :
		- now uses the new file names for the share/innocent-pear/
		  doge-*.cc modules
		- now uses sleepier_t class

		bin/innocent-pear-doge.cc ,
		share/innocent-pear/calm.cc :
		- now uses sleepier_t class

		share/innocent-pear/doge-01.cc :
		- renamed from share/innocent-pear/doge-1.cc

		share/innocent-pear/doge-02.cc :
		- renamed from share/innocent-pear/doge-2.cc

		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-04.cc :
		- renamed and split from share/innocent-pear/doge-3.cc

		share/innocent-pear/doge-05.cc :
		- renamed from share/innocent-pear/doge-4.cc

		share/innocent-pear/doge-98.cc :
		- renamed from share/innocent-pear/doge-8.cc
